@@ -1,5 +1,5 @@
 ./dist
 ./build
 *.egg-info
-./daemon/_version_info.py
+./daemon/version_info.json
 .coverage
