@@ -14,9 +14,42 @@
 
 from __future__ import (absolute_import, unicode_literals)
 
+import os
+import os.path
+import json
+import datetime
+
 import pkg_resources
 
-from ._version_info import version_info
+
+version_info_file_path = os.path.join(
+        os.path.dirname(__file__), "version_info.json")
+
+def read_version_info_from_file(file_path):
+    """ Read the version info from the specified file.
+
+        :param file_path: Filesystem path to the version info file.
+        :return: The version info mapping.
+
+        The version info file is a JSON-serialised mapping of
+        information about the VCS revision from which the source tree
+        was built.
+
+        """
+    infile = open(file_path, 'r')
+    info_raw = json.load(infile)
+
+    item_converters = {}
+
+    info = {}
+    for (name, value_raw) in info_raw.items():
+        if name in item_converters:
+            value = item_converters[name](value_raw)
+        else:
+            value = value_raw
+        info[name] = value
+
+    return info
 
 
 distribution_name = "python-daemon"
@@ -40,6 +73,7 @@ author_name = "Ben Finney"
 author_email = "ben+python@benfinney.id.au"
 author = "%(author_name)s <%(author_email)s>" % vars()
 
+version_info = read_version_info_from_file(version_info_file_path)
 copyright_year_begin = "2001"
 date = version_info['date'].split(' ', 1)[0]
 copyright_year = date.split('-')[0]
